# desafio-mb

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py  response.py  settings.py
app/core/: api.py  exceptions.py  models.py  repository.py  services.py
app/models/: __init__.py  auth.py
app/web/: main.py  request.py  response.py
app/web/adapters/auth/: base.py  token_auth.py
app/web/adapters/cache/: backend.py  memory_backend.py
app/web/caching/: backend.py  memory_backend.py
app/web/middleware/: cache.py
app/web/services/: auth.py
config/: apis.ini  symbols.ini
migrations/: env.py
migrations/versions/: cf45c7ab61e1_initial.py  e0b5ed14c936_initial.py
